substrate/frame/support/test/tests/benchmark_ui/empty_function.stderr
error: No valid #[extrinsic_call] or #[block] annotation could be found in benchmark function body.
  --> tests/benchmark_ui/empty_function.rs:27:13
   |
27 |     fn bench() {}
   |                ^^
